--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "my-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "openai": "^5.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
