--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.1",
+        "nodemailer": "^6.9.0",
+    "axios": "^1.6.0",
+  
     "express": "^5.1.0",
     "openai": "^5.15.0"
   },
